--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -38,10 +38,12 @@ datalist_ED = lapply(list.files(here("04_RawData", "pilot", "ER-ED/logfiles"), p
                           read.csv, stringsAsFactors = FALSE, header = TRUE)
 
 # new empty frame to store files into
-data_ER = data.frame(ID = character(), block = character(), arousal = double(), effort = double(), trigger = double(), trigger_reg = double())
+data_ER = data.frame(ID = character(), block = character(), arousal = double(), 
+                     effort = double(), trigger = double(), trigger_reg = double())
 
 data_ED = data.frame(ID = character(), step = double(), choice = character(),
-                           LBvalue = double(), LBlevel = double(), RBvalue = double(), RBlevel = double())
+                     LBvalue = double(), LBlevel = double(), RBvalue = double(), RBlevel = double())
+
 data_choice = data.frame(ID = character(), choice = double())
 
 # store arousal and effort ratings in data_ER frame
@@ -119,16 +121,19 @@ for (i in 1:length(datalist_ER)) {
 }
 
 # store ED data in data_ED frame
-#for (i in 1:length(datalist_ED)) {
+for (i in 1:length(datalist_ED)) {
   
-#  tmp = data.frame(datalist_ED[[i]][["participant"]][2:length(datalist_ED[[i]][["participant"]])],
-#                          datalist_ED[[i]][["EDround.thisN"]][2:length(datalist_ED[[i]][["EDround.thisN"]])],
-#                          datalist_ED[[i]][["EDclick.clicked_name"]][2:length(datalist_ED[[i]][["EDclick.clicked_name"]])],
-#                          datalist_ED[[i]][["EDleftbutton.value"]][2:length(datalist_ED[[i]][["EDleftbutton.value"]])],
-#                          datalist_ED[[i]][["EDleftbutton.nback"]][2:length(datalist_ED[[i]][["EDleftbutton.nback"]])],
-#                          datalist_ED[[i]][["EDrightbutton.value"]][2:length(datalist_ED[[i]][["EDrightbutton.value"]])],
-#                          datalist_ED[[i]][["EDrightbutton.nback"]][2:length(datalist_ED[[i]][["EDrightbutton.nback"]])])
-#}
+  tmp = data.frame(datalist_ED[[i]][["participant"]][2:length(datalist_ED[[i]][["participant"]])],
+                   datalist_ED[[i]][["EDround.thisN"]][2:length(datalist_ED[[i]][["EDround.thisN"]])],
+                   datalist_ED[[i]][["EDclick.clicked_name"]][2:length(datalist_ED[[i]][["EDclick.clicked_name"]])],
+                   datalist_ED[[i]][["EDleftbutton.value"]][2:length(datalist_ED[[i]][["EDleftbutton.value"]])],
+                   datalist_ED[[i]][["EDleftbutton.nback"]][2:length(datalist_ED[[i]][["EDleftbutton.nback"]])],
+                   datalist_ED[[i]][["EDrightbutton.value"]][2:length(datalist_ED[[i]][["EDrightbutton.value"]])],
+                   datalist_ED[[i]][["EDrightbutton.nback"]][2:length(datalist_ED[[i]][["EDrightbutton.nback"]])])
+  
+  colnames(tmp) = names(data_ED)
+  data_ED = rbind(data_ED, tmp)
+}
 
 ```
 
