--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -705,8 +705,9 @@ In the pilot study, the online questionnaires were completed after the two lab s
 
 ## Analysis
 
-We aim to conduct all analysis as described in Westbrook et al. [-@Westbrook2013], but the level of detail was not always sufficient, so there might be deviations regarding data cleaning and degrees of freedom. The performance measure *d'* will be computed as the difference of the *z*-transformed hit rate and the *z*-transformed false alarm rate [@Macmillan1990]. Reaction time (RT) data will be trimmed by excluding all trials with responses faster than 100 ms, as the relevant cognitive processes cannot have been completed before [@Whelan2008; @Berger2021]. Error- and post-error trials will be excluded, because RT on the latter is longer due to more cautious behavior [@Dutilh2012; @Houtman2012].
-Declining performance will be investigated by calculating a repeated measures analysis of variance (rmANOVA) with three paired contrasts comparing *d'* between two levels of 2-, 3-, and 4-back at a time.
+We aim to conduct all analysis as described in Westbrook et al. [-@Westbrook2013], but the level of detail was not always sufficient, so there might be deviations regarding data cleaning and degrees of freedom. The performance measure *d'* will be computed as the difference of the *z*-transformed hit rate and the *z*-transformed false alarm rate [@Macmillan1990]. Reaction time (RT) data will be trimmed by excluding all trials with responses faster than 100 ms, as the relevant cognitive processes cannot have been completed before [@Whelan2008; @Berger2021]. Error- and post-error trials will be excluded in repeated measures analyses of variance (rmANOVA) and controlled for in multi-level-model (MLM), because RT on the latter is longer due to more cautious behavior [@Dutilh2012; @Houtman2012].
+To test our hypotheses, we perform a series of rmANOVAs and MLM with orthogonal sum-to-zero contrasts in order to meaningfully interpret results [@Singmann2017]. 
+Declining performance will be investigated by calculating a rmANOVA with three paired contrasts comparing *d'* between two levels of 2-, 3-, and 4-back at a time.
 Another rmANOVA with three paired contrasts will be computed to compare the mean RT between two levels of 2-, 3-, and 4-back at a time.
 To investigate changes in NASA-TLX ratings, six rmANOVAs will be computed, one for each NASA-TLX subscale, and each with six paired contrasts comparing the ratings between two levels of 1-, 2-, 3-, and 4-back at a time.
 For each ED round, SVs will be calculated by adding or subtracting 0.015625 from the last monetary value of the flexible level, depending on the participant's last choice.
@@ -714,24 +715,17 @@ Then, these final monetary values will be divided by 2€, and the SV of each le
 A rmANOVA with six paired contrasts will be computed, comparing the SVs between two levels of 1-, 2-, 3-, and 4-back at a time.
 Tukey method will be used for the paired contrasts of each rmANOVA, including *p*-value adjustment.
 
-To determine the influence of task performance in the association of SVs and n-back level, we will set up a multi-level model.
-+ NFC
-**MLM explanation goes here** 
-
-fit using $lmerTest$ package
-# center level 1 predictors
- two ways: centering at the grand mean (CGM) vs. centering within cluster (CWC) = group mean centering
- level 1 predictor (SV) is of substantive interest
- CWC
-# level 2 predictor
- CGM
-null model > ICC
-random slopes model
-  controlled for performance (d', RT), correct and post-correct trials
-parameter estimation REML
-include model?
-simple slopes analysis
-  
+To determine the influence of task performance in the association of SVs and n-back level, we will set up a MLM using the $lmerTest$ package. 
+We apply restricted maximum likelihood (REML) to fit the model.
+First, we calculate the intraclass correlation (ICC) on the basis of the null model.
+Second, we estimate a random slopes model of SV including n-back load level as level-1-predictor and, additionally, NFC as level-2-predictor. 
+Within the model, we control for *d'*, RT, correct and post-correct trials.
+$$
+SV \sim level\ * NFC + d' + RT + correct + postcorrect + (level|subject)
+$$
+Level-1-predictors are centered within cluster, whereas the level-2-predictor is centered at the grand mean as recommended by Enders & Tofighi [-@Enders2007].
+Third, we perform a simple slopes analysis with n-back level as predictor and NFC as moderator. 
+# TODO: Johnson-Neyman plot
 
 To ensure the validity of the multi-level model, we will conduct a specification curve analysis [@Simonsohn2020], which will include 92 possible preprocessing pipelines of the RT data.
 These pipelines specify which transformation was applied (none, log, inverse, or square-root), which outliers were excluded (none, $2 SD$ from the mean, $3 SD$ from the mean, RTs below 100 ms), whether post-error trials were excluded or not, and across which dimensions the transformations and exclusions were applied (across/within subjects and across/within n-back levels).
@@ -1140,7 +1134,7 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
   m1_h2b.ss <- sim_slopes(m1_h2b, pred = level.cwc, modx = nfc.cgm, centered = "none", 
                     cond.int = T,                                       # print conditional intercepts
                     johnson_neyman = T, jnplot = T, control.fdr = T)    # calculate Johnson Neyman intervals, 
-                                                                        # create plot, adjust false discovery rate
+                                                              
   
   # prepare MLM results for reporting ------------------------------------------
   
@@ -1209,14 +1203,7 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
                                 x.label = "n back load level", y.label = "subjective value",
                                 legend.main = "NFC", interval = T) + theme_apa()
 
-  # TODO: Corinna go on here :) 
-    # -> prepare tables: MLM results + huxtable
-    # -> write methods
-    # -> write results
-    
-    # "SVs decline stronger with increasing load level for individuals with low compared to high NFC scores" 
-
-
+ 
 ```
 
 ### Changes in subjective values depend reliably on n-back level
